# asteroid-gliders

./: .gitignore  CMakeLists.txt  Readme.md  point.hpp
src/: glider.cpp  glider.hpp  integrator.hpp  point.hpp  system.hpp
